Bug fixes for not-logged-in feedback. Attempt to fit feedback buttons on small mac screens

--- a/style/comments.css
+++ b/style/comments.css
@@ -17,7 +17,8 @@
     background-color: lightgrey;
     text-align: right;
     display: inline-grid;
-    grid-template-columns: 10.5% 12.5% 10% 12.5% 12.5% 17% 12.5% 12.5%;
+    /*grid-template-columns: 10.5% 12.5% 10% 12.5% 12.5% 17% 12.5% 12.5%;*/
+    grid-template-columns: 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5%;
     justify-content: space-between;
     padding-top: 7px;
     padding-right: 7px;
@@ -77,30 +78,34 @@
 }
 
 .agree_button {
-    grid-column: 2;
+    /*grid-column: 2;*/
+    grid-column: 1;
     text-align: right !important;
 }
 
 .agree_label {
     text-align: center;
-    grid-column: 3;
+    /*grid-column: 3;*/
+    grid-column: 2;
     line-height: 38px;
     height: 24px;
 }
 
 .disagree_button {
     text-align: left !important;
-    grid-column: 4;
+    /*grid-column: 4;*/
+    grid-column: 3;
 }
 
 .argued_button {
-    grid-column: 5;
+    /*grid-column: 5;*/
+    grid-column: 4;
     text-align: right !important;
 }
 
 .argued_label {
     text-align: center;
-    grid-column: 6;
+    grid-column: 5/7;
     line-height: 38px;
     height: 24px;
 }
